--- a/Kernel/configs/gta4l-Non-KernelSU.config.json
+++ b/Kernel/configs/gta4l-Non-KernelSU.config.json
@@ -3,7 +3,7 @@
     "kernelSource": {
       "name": "gta4l-Non-KernelSU",
       "repo": "https://github.com/YFMARCO/android_kernel_samsung_gta4lxx",
-      "branch": "twrp-12.1",
+      "branch": "14.0",
       "device": "gta4l",
       "defconfig": "gta4l_eur_open_defconfig"
     },
